auto-test/tests/chapter_18/invalid_parse/extra_credit/union_var_bad_tag.c
int main(void) {
    union 4 foo;  
    return 0;
}